<resources>
    <string name="app_name">Kicker App</string>

    <string name="facebook_app_id">1685748595015872</string>

    <string name="loading">Loading</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="preference_file_key">login_handler</string>

    <!-- Player profile-->
    <string name="player_name">Name:</string>
    <string name="games">Games:</string>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="achievements">Achievements:</string>

    <!-- Navigation View-->
    <string name="nav_games">Games</string>
    <string name="games_screen">Games</string>
    <string name="game_screen">Game</string>

    <string name="profile_screen">Profile</string>

    <string name="nav_tournaments">Tournaments</string>

    <string name="settings">Settings</string>

    <string name="logout">Logout</string>

    <string name="add_player">Add Player</string>
    <string name="player_name_value">Player</string>
    <string name="score_number">0:0</string>
    <string name="vs_game">VS</string>

    <string name="players_edit_dialog_title">Choose Players</string>
    <string name="players_edit_dialog_ok">OK</string>

    <string name="start_game_fab_dialog">Play</string>
    <string name="edit_game_name_fab_dialog">Game Name</string>
    <string name="edit_win_score_fab_dialog">Max Score: </string>

    <string name="edit_game_name_dialog_title">Set Game Name</string>
    <string name="edit_game_name_dialog_ok">OK</string>
    <string name="edit_game_name_dialog_cancel">Cancel</string>

    <string name="edit_game_win_score_dialog_title">Set Game Max Score</string>
    <string name="edit_game_win_score_dialog_ok">OK</string>
    <string name="edit_game_win_score_dialog_cancel">Cancel</string>
    <string name="edit_game_win_score_dialog_min_val">Cannot be 0 or more than 10</string>
    <string name="kicker_one">KickerOne</string>

    <string-array name="game_state">
        <item>Created</item>
        <item>Ready</item>
        <item>Active</item>
        <item>Finished</item>
    </string-array>

    <string-array name="wins_score_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
