<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/main_swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playerAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_margin="25dp"
                android:src="@mipmap/ic_launcher"
                />

            <TextView
                android:id="@+id/txtPlayerNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/playerAvatar"
                android:layout_marginRight="15dp"
                android:text="@string/player_name"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txtPlayerNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/txtPlayerNameLabel"
                android:layout_below="@+id/txtPlayerNameLabel"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtGameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/playerAvatar"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="@string/games"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/txtGamesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtGameLabel"
                android:layout_below="@+id/txtGameLabel"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtWinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtGamesValue"
                android:layout_below="@+id/txtGamesValue"
                android:layout_marginTop="15dp"
                android:text="@string/wins"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/txtWinsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtWinsLabel"
                android:layout_below="@+id/txtWinsLabel"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtLossesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtWinsValue"
                android:layout_below="@+id/txtWinsValue"
                android:layout_marginTop="15dp"
                android:text="@string/losses"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/txtLossesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtLossesLabel"
                android:layout_below="@+id/txtLossesLabel"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/txtAchievementsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtLossesValue"
                android:layout_below="@+id/txtLossesValue"
                android:layout_marginTop="25dp"
                android:text="@string/achievements"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>