<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/game_screen_swipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:indeterminate="true"
                android:visibility="gone"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_game_team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardBackgroundColor="@color/blue_team">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/mr_game_team1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleDelayClick="true"
                    app:mrl_rippleOverlay="true">

                    <RelativeLayout
                        android:id="@+id/rl_team1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cv_game_player1_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/account_plus"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp"/>

                        <TextView
                            android:id="@+id/cv_game_player1_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/cv_game_player1_avatar"
                            android:layout_alignTop="@+id/cv_game_player1_avatar"
                            android:layout_toRightOf="@+id/cv_game_player1_avatar"
                            android:gravity="center_vertical"
                            android:text="@string/add_player"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cv_game_player2_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_below="@+id/cv_game_player1_avatar"
                            android:layout_margin="5dp"
                            android:src="@drawable/account_plus"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp"/>

                        <TextView
                            android:id="@+id/cv_game_player2_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/cv_game_player2_avatar"
                            android:layout_alignTop="@+id/cv_game_player2_avatar"
                            android:layout_toRightOf="@+id/cv_game_player2_avatar"
                            android:gravity="center_vertical"
                            android:text="@string/add_player"/>

                    </RelativeLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/cv_game_vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_game_team1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/vs_game"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/cv_game_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_game_vs"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/score_number"
                android:textSize="20sp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_game_team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_game_score"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardBackgroundColor="@color/red_team"
                >

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/mr_game_team2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleDelayClick="true"
                    app:mrl_rippleOverlay="true">

                    <RelativeLayout
                        android:id="@+id/rl_team2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cv_game_player3_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:src="@drawable/account_plus"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp"/>

                        <TextView
                            android:id="@+id/cv_game_player3_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/cv_game_player3_avatar"
                            android:layout_alignTop="@+id/cv_game_player3_avatar"
                            android:layout_toRightOf="@+id/cv_game_player3_avatar"
                            android:gravity="center_vertical"
                            android:text="@string/add_player"/>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/cv_game_player4_avatar"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_below="@+id/cv_game_player3_avatar"
                            android:layout_margin="5dp"
                            android:src="@drawable/account_plus"
                            app:civ_border_color="#FF000000"
                            app:civ_border_width="2dp"/>

                        <TextView
                            android:id="@+id/cv_game_player4_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/cv_game_player4_avatar"
                            android:layout_alignTop="@+id/cv_game_player4_avatar"
                            android:layout_toRightOf="@+id/cv_game_player4_avatar"
                            android:gravity="center_vertical"
                            android:text="@string/add_player"/>

                    </RelativeLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>